@@ -123,6 +123,16 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QCheckBox" name="checkBoxHideMainPath">
+        <property name="toolTip">
+         <string>By default hide the main path if the seam allowance was enabled</string>
+        </property>
+        <property name="text">
+         <string>Hide main path</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
