@@ -1,6 +1,7 @@
 # Version 0.6.0
 - [#682] New feature. Export increments to Excel .csv.
 - [#681] Enhance feature: Dashed line options for curves, arcs, etc.
+- [#684] Proposal: Add option to only show outer edges on detail.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
